<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/sheet_handle"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_socket_client_id_title"
            android:layout_gravity="center_vertical"
            android:textColor="@color/system_accent_darker"
            android:fontFamily="sans-serif"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/socket_id"
            android:text="@string/info_unknown"
            android:textColor="?attr/colorOnSurface"
            android:textIsSelectable="true"
            android:textSize="16sp"
            android:layout_marginStart="50dp"
            android:fontFamily="sans-serif"
            android:gravity="end"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_server_using"
            android:layout_gravity="center_vertical"
            android:textColor="@color/system_accent_darker"
            android:fontFamily="sans-serif"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/server_using"
            android:text="@string/info_unknown"
            android:textColor="?attr/colorOnSurface"
            android:textIsSelectable="true"
            android:textSize="16sp"
            android:layout_marginStart="50dp"
            android:fontFamily="sans-serif"
            android:gravity="end"/>

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <net.hearnsoft.gensokyoradio.trd.widgets.CustomSettingsView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_edit_server"
        app:iconSrc="@drawable/ic_server"
        app:titleText="@string/settings_edit_server_title"/>

    <net.hearnsoft.gensokyoradio.trd.widgets.CustomSettingsSwitchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_visualizer_switch"
        app:icon="@drawable/ic_visualizer"
        app:title="@string/settings_ui_visualizer_title"/>

    <net.hearnsoft.gensokyoradio.trd.widgets.CustomSettingsView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_about"
        app:iconSrc="@drawable/ic_info"
        app:titleText="@string/about_title"/>


</LinearLayout>