<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_group"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_default"
            android:id="@+id/server_default"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_mobile"
            android:id="@+id/server_mobile"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_enhanced"
            android:id="@+id/server_enhanced"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_custom"
            android:id="@+id/server_custom"/>

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/server_group">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/server_url_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server_custom"
            android:inputType="text"
            android:enabled="false"/>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>